@@ -13,6 +13,7 @@ Verilator 5.041 devel
 
 **Other:**
 
+* Add error on non-packed struct randc (#5999). [Seth Pellegrino]
 * Improve automatic selection of logic for DFG synthesis (#6370). [Geza Lore]
 * Improve `covergroup with function sample` handling  (#6387). [Jakub Wasilewski]
 * Optimize dead functions without references (#6380). [Artur Bieniek, Antmicro Ltd.]
